--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.11.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.49.0"
   },
