--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.8",
+    "@mui/material": "^5.15.6",
     "@tinymce/tinymce-react": "^4.3.2",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
