--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.10",
     "html-react-parser": "^5.1.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^4.25.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
