--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-colorful": "^5.6.1",
     "react-datepicker": "^4.25.0",
     "react-datetime": "^3.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.11.1",
