--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@material-tailwind/react": "^2.1.8",
     "@mui/material": "^5.15.6",
     "@tinymce/tinymce-react": "^4.3.2",
+    "daisyui": "^4.7.3",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
     "html-react-parser": "^5.1.1",
