--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
     "html-react-parser": "^5.1.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^4.25.0",
@@ -29,6 +30,7 @@
     "react-dropdown": "^1.11.0",
     "react-dropdown-select": "^4.11.1",
     "react-outside-click-handler": "^1.3.0",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.49.0"
